k8s-concepts/alpine-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod
  namespace: default
  labels:
    app: test
spec:
  containers:
  - name: alpine
    image: alpine:latest
    command: ["sleep", "3600"]
