k8s-concepts/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  namespace: blue
  labels:
    app: postgres
spec:
  containers:
  - name: postgres
    image: postgres:15
    ports:
    - containerPort: 5432
    env:
    - name: POSTGRES_DB
      value: testdb
    - name: POSTGRES_USER
      value: admin
    - name: POSTGRES_PASSWORD
      value: admin123
    volumeMounts:
    - name: pgdata
      mountPath: /var/lib/postgresql/data
  volumes:
  - name: pgdata
    emptyDir: {}
