k8s-concepts/red-ns-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: red-ns-np
  namespace: red
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
     - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - green
          - blue
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
